--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
       with:
         submodules: true
     - name: Set up Node
-      uses: actions/setup-node@v2-beta
+      uses: actions/setup-node@v4
       with:
-        node-version: 16.x
+        node-version: 18.x
     - name: Install build dependencies
       run: sudo apt-get update && sudo apt-get install -y libfmt-dev
     - name: Install
