fix: add cstdint header for uint64_t support in testlib
Modern GCC requires explicit inclusion of cstdint header for uint64_t type

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "object-hash": "^3.0.0",
     "prettier": "^2.7.1",
     "promise-queue": "^2.2.5",
+    "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
-    "simple-sandbox": "^0.3.25",
     "socket.io-client": "^4.5.1",
     "socket.io-msgpack-parser": "^3.0.1",
     "stream-to-string": "^1.2.0",
