--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/testlib"]
 	path = vendor/testlib
 	url = https://github.com/MikeMirzayanov/testlib
+[submodule "simple-sandbox"]
+	path = simple-sandbox
+	url = git@github.com:255doesnotexist/simple-sandbox.git
